# ingestlib

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  config.example.yaml  config.yaml  mkdocs.yml  pyproject.toml  rules.example.yaml
.github/workflows/: docs.yml
assets/: ingestlib.pptx
docs/: index.md
docs/about/: architecture.md  benchmarks.md  limits.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: artifact-store.md  classify.md  content-rules.md  ingest.md  parse.md  providers.md  retrieve.md  split.md  studio.md  vector-stores.md
docs/reference/: config.md  models.md  operations.md  services.md  storage.md
evals/: dataset.yaml  run_eval.py
infra/: README.md  iam-deploy-policy.json  iam-policy.json  opensearch.yaml
src/ingestlib/: __init__.py  config.py
src/ingestlib/foundations/: __init__.py
src/ingestlib/foundations/llm/: __init__.py
src/ingestlib/foundations/ocr/: __init__.py  models.py  paddle_vl.py
src/ingestlib/operations/: __init__.py
src/ingestlib/operations/classify/: __init__.py  chunker.py  classifier.py  models.py
src/ingestlib/operations/parse/: __init__.py  assembler.py  detector.py  enricher.py  models.py  pipeline.py  reviewer.py
src/ingestlib/operations/split/: __init__.py  models.py  pages.py  sections.py  segmenter.py  splitter.py
src/ingestlib/services/: __init__.py
src/ingestlib/services/ingest/: __init__.py  ingestor.py  models.py
src/ingestlib/services/retrieve/: __init__.py  models.py  retriever.py
src/ingestlib/storage/: __init__.py  artifacts.py  base.py  blobs.py
src/ingestlib/storage/milvus/: __init__.py  client.py  store.py
src/ingestlib/storage/mongodb/: __init__.py  client.py  store.py
src/ingestlib/storage/opensearch/: __init__.py  client.py  store.py
src/ingestlib/storage/pgvector/: __init__.py  client.py  store.py
src/ingestlib/storage/pinecone/: __init__.py  client.py  store.py
src/ingestlib/storage/qdrant/: __init__.py  client.py  store.py
src/ingestlib/storage/s3/: __init__.py  client.py
src/ingestlib/storage/sqlite/: __init__.py  client.py  store.py
src/ingestlib/storage/weaviate/: __init__.py  client.py  store.py
src/ingestlib/utils/: __init__.py  files.py  logger.py
tests/: conftest.py  test_config.py
tests/foundations/llm/: _shared.py  test_dispatch.py
tests/foundations/llm/jina/: conftest.py  test_async.py  test_errors.py  test_rerank.py
tests/foundations/ocr/: test_check_server.py  test_models.py  test_paddle_vl.py
tests/operations/classify/: test_chunker.py  test_classifier_settings.py  test_classify_e2e.py  test_models.py
tests/operations/parse/: test_assembler.py  test_detector.py  test_enricher.py  test_models.py  test_parse_e2e.py
tests/operations/split/: test_models.py  test_pages.py  test_segmenter.py  test_split_e2e.py  test_splitter_settings.py
tests/services/: test_services_e2e.py
tests/services/ingest/: test_models.py  test_on_stage.py
tests/services/retrieve/: test_models.py  test_reranker_dispatch.py
tests/storage/: test_artifacts_e2e.py  test_artifacts_local.py  test_base.py  test_default_store.py
tests/storage/milvus/: test_mappings.py  test_milvus_e2e.py
tests/storage/mongodb/: test_mappings.py  test_mongodb_e2e.py
tests/storage/opensearch/: test_mappings.py  test_opensearch_e2e.py
tests/storage/pgvector/: test_mappings.py  test_pgvector_e2e.py
tests/storage/pinecone/: test_hybrid.py  test_mappings.py  test_pinecone_e2e.py
tests/storage/qdrant/: test_mappings.py  test_qdrant_e2e.py
tests/storage/sqlite/: test_mappings.py  test_sqlite_store.py
tests/storage/weaviate/: test_mappings.py  test_weaviate_e2e.py
tests/utils/: test_logger.py
(+34 files in other folders)
