[project]
name = "ingestlib"
version = "0.1.0"
description = "Self-hosted document intelligence for RAG — parse, classify, and split PDF/DOCX/PPTX into searchable, cited, retrieval-ready chunks"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

authors = [
    { name = "ramacharanreddy-k", email = "ramacharanreddykasireddy@gmail.com" },
]
dependencies = [
    "boto3>=1.43.29",
    "botocore[crt]>=1.43",
    "httpx>=0.27",
    "langchain-aws>=1.5.1",
    "mlx-vlm>=0.6.4",
    "paddleocr>=3.7.0",
    "paddlepaddle>=3.3.1",
    "paddlex[genai-client,ocr]==3.7.1",
    "Pillow>=10.0",
    "pinecone>=9.1.0",
    "pydantic>=2.0",
    "pypdfium2>=4.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestlib"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.17",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
