[project]
name = "ingestlib"
version = "0.7.0"
description = "Self-hosted document intelligence for RAG — parse, classify, and split PDF/DOCX/PPTX into searchable, cited, retrieval-ready chunks"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"

authors = [
    { name = "ramacharanreddy-k", email = "ramacharanreddykasireddy@gmail.com" },
]
keywords = [
    "rag",
    "document-intelligence",
    "document-parsing",
    "ocr",
    "chunking",
    "hybrid-search",
    "retrieval",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "boto3>=1.43.29",
    "botocore[crt]>=1.43",
    "fastembed>=0.8.0",
    "httpx>=0.27",
    "langchain-aws>=1.5.1",
    "langchain-openai>=1.0",
    # runs the OCR inference server on Apple Silicon; never imported by the
    # library itself — NVIDIA users run vLLM instead (see README)
    "mlx-vlm>=0.6.4; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "opensearch-py>=2.8",
    "paddleocr>=3.7.0",
    "paddlepaddle>=3.3.1",
    "paddlex[genai-client,ocr]==3.7.1",
    "pgvector>=0.4",
    "Pillow>=10.0",
    "pinecone>=9.1.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.0",
    "pymilvus>=2.6",
    "pymongo>=4.10",
    "pypdfium2>=4.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.18.0",
    "sqlite-vec>=0.1.6",
    "weaviate-client>=4.9",
]

[project.urls]
Homepage = "https://github.com/LangModule/ingestlib"
Documentation = "https://langmodule.github.io/ingestlib/"
Repository = "https://github.com/LangModule/ingestlib"
Issues = "https://github.com/LangModule/ingestlib/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestlib"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.17",
    "pytest-asyncio>=0.24",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
